--- a/Licpp/Licpp/Licpp.vcxproj
+++ b/Licpp/Licpp/Licpp.vcxproj
@@ -118,10 +118,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Atom.cpp" />
+    <ClCompile Include="Expression.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ParseTree.cpp" />
     <ClCompile Include="Repl.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Atom.h" />
+    <ClInclude Include="Expression.h" />
+    <ClInclude Include="ParseTree.h" />
     <ClInclude Include="Repl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
